--- a/views/mapa.html
+++ b/views/mapa.html
@@ -34,7 +34,7 @@
     // The data used in this sample can be obtained from the CDN
     // https://cdn.anychart.com/samples/maps-bubble/bubble-earthquakes-map/data.json
     //anychart.data.loadJsonFile('https://cdn.anychart.com/samples/maps-bubble/bubble-earthquakes-map/data.json', function (data) {
-    anychart.data.loadJsonFile('http://localhost:3000/apitest', function (data) {
+    anychart.data.loadJsonFile('http://localhost:3000/data', function (data) {
         // Creates data set
         var dataSet = anychart.data.set(data);
 
